--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Handshake Alliance Team",
   "license": "MIT",
   "dependencies": {
     "bevent": "^0.1.4",
