update example to include database name configuration

--- a/example/hindexer.conf
+++ b/example/hindexer.conf
@@ -1,5 +1,12 @@
+#
+# Example Hindexer Configuration
+#
+
 db-client: postgres
 db-host: localhost
 db-port: 5432
 db-user: postgres
 db-pass: my-secret-pw
+
+# Database name defaults to hindex, but can be changed with the db-name variable
+# db-name: hindex
