--- a/example/hsd.conf
+++ b/example/hsd.conf
@@ -7,3 +7,6 @@ hindexer-db-host: localhost
 hindexer-db-port: 5432
 hindexer-db-user: postgres
 hindxer-db-pass: my-secret-pw
+
+# Database name defaults to hindex, but can be changed with the db-name variable
+# db-name: hindex
